add README, instructions link

--- a/index.html
+++ b/index.html
@@ -225,6 +225,17 @@ div#station-coloring-display {
   font: 18px Arial;
 }
 
+div#instructions-display {
+  position: absolute;
+  padding: 5px;
+  bottom: 10px;
+  left: 10px;
+  background-color: rgba(255,255,255,0.9);
+  color: #000000;
+  border-radius: 10px;
+  font: 18px Arial;
+}
+
 #graph-overlay .close-button {
   position: absolute;
   top: 10px;
@@ -290,6 +301,7 @@ div#station-coloring-display {
    </table>
  </div>
  <div id="station-coloring-display"></div>
+ <div id="instructions-display"><a href="http://github.com/embeepea/ghcn-trend-map">instructions</a></div>
  <div id="graph-overlay" class="invisible">
    <div class="graph-wrapper">
      <div class="close-button"><span class="glyphicon glyphicon-remove-circle"></span></div>
