add fernleaf logo

--- a/index.html
+++ b/index.html
@@ -274,6 +274,14 @@ div#instructions-display {
   height: 100%;
 }
 
+#fli-logo {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  padding: 5px;
+  border-radius: 10px;
+  background-color: #ffffff;
+}
  </style>
 </head>
 <body> 
@@ -308,5 +316,6 @@ div#instructions-display {
      <div class="multigraph-wrapper"></div>
    </div>
  </div>
+ <div id="fli-logo"><a href="http://fernleafinteractive.com"><img src="fli-logo-150.png"></a></div>
 </body>
 </html>
