move config settings to map-config.js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <script src="libs/ug-d3.v3.js"></script>
  <script src="libs/multigraph-min.js"></script>
  <script src="libs/sprintf.js"></script>
+ <script src="map-config.js"></script>
  <script src="map.js"></script>
  <link rel="stylesheet" href="libs/bootstrap-3.3.4-dist/css/bootstrap.css" />
  <link rel="stylesheet" href="libs/leaflet.css" />
